# cute-video-toolkits

./: CMakeLists.txt  LICENSE  README.md
docs/: 设计大纲.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  utils.cpp  utils.h
src/app/widget/: filechoosearea.cpp  filechoosearea.h  logarea.cpp  logarea.h  mediainfoarea.cpp  mediainfoarea.h  pipelinearea.cpp  pipelinearea.h
src/cutevideo/: CMakeLists.txt  lib.cpp  lib.h
